--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -493,8 +493,8 @@ http://www.tooplate.com/view/2106-soft-landing
     color: #ffffff;
   }
 
-  .testimonial-image {
-    background: url('../images/testimonial-image.jpg') no-repeat center center;
+  .profile-pic {
+    background: url('../images/Profile_Pic/About.jpg') no-repeat center center;
     background-size: cover;
     width: 100%;
     height: 65vh;
