--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -493,7 +493,7 @@ http://www.tooplate.com/view/2106-soft-landing
     color: #ffffff;
   }
 
-  .testimonial-pic {
+  .testimonial-image {
     background: url('../images/Profile_Pic/About.jpg') no-repeat center center;
     background-size: cover;
     width: 100%;
