--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -348,6 +348,37 @@ http://www.tooplate.com/view/2106-soft-landing
   }
   
 
+  /*---------------------------------------
+      Test     Researc     
+  -----------------------------------------*/
+
+  #research {
+    background: url('../images/Sections/Research.JPG') no-repeat center center;
+    background-size: cover;
+    vertical-align: middle;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    min-height: 100vh;
+    position: relative;
+    padding-top: 12em;
+    text-align: center;
+  }
+
+
+  .research-info h3 {
+    color: #f0f0f0;
+    font-size: 11px;
+    font-weight: bold;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+    margin: 10px 0;
+  }
 
   /*---------------------------------------
       FEATURE              
