--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -572,6 +572,75 @@ http://www.tooplate.com/view/2106-soft-landing
 
 
 
+
+  /*---------------------------------------
+      IMAGE TEST           
+  -----------------------------------------*/
+
+  #research {
+    background: #ffffff;
+  }
+
+  #research .col-md-6 {
+    margin: 0;
+    padding: 0;
+  }
+
+  #research .section-title {
+    padding-bottom: 0;
+  }
+
+  #research h1 {
+    color: #ffffff;
+  }
+
+  .research-image {
+    background: url('../images/Sections/Research.JPG') no-repeat center center;
+    background-size: cover;
+    width: 100%;
+    height: 65vh;
+  }
+
+
+  .research-info {
+    background: #202020;
+    padding: 40px;
+    height: 65vh;
+  }
+
+  .research-info h3 {
+    color: #d9d9d9;
+    font-style: italic;
+    margin-top: 5px;
+  }
+
+  .research-info .item {
+    display: block;
+    width: 100%;
+  }
+
+  .research-item {
+    margin: 20px 0;
+  }
+
+  .owl-carousel .owl-item img,
+  .research-item img,
+  .research-item h4 {
+    color: #d9d9d9;
+    display: inline-block;
+    vertical-align: top;
+  }
+
+  .owl-carousel .owl-item img,
+  .research-item img {
+    border: 3px solid #ffffff;
+    border-radius: 100px;
+    width: 60px;
+    height: 60px;
+    margin-right: 10px;
+  }
+
+
   /*---------------------------------------
       PRICING             
   -----------------------------------------*/
