--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -574,7 +574,7 @@ http://www.tooplate.com/view/2106-soft-landing
 
 
   /*---------------------------------------
-      IMAGE TEST           
+      Research Image         
   -----------------------------------------*/
 
   #research {
