--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -596,9 +596,9 @@ http://www.tooplate.com/view/2106-soft-landing
 
   .research-image {
     background: url('../images/Sections/Research.JPG') no-repeat center center;
-    background-size: cover;
+    background-size: contain;
     width: 100%;
-    height: 65vh;
+    height: 35vh;
   }
 
 
