--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -595,7 +595,7 @@ http://www.tooplate.com/view/2106-soft-landing
   }
 
   .research-image {
-    background: url('../images/Sections/Research.JPG') no-repeat center center;
+    background: url('../images/Sections/Research.JPG') no-repeat;
     background-size: cover;
     width: 100%;
     height: 35vh;
