--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -349,7 +349,7 @@ http://www.tooplate.com/view/2106-soft-landing
   
 
   /*---------------------------------------
-      Test     Researc     
+      Research image   
   -----------------------------------------*/
 
   #research {
@@ -372,6 +372,39 @@ http://www.tooplate.com/view/2106-soft-landing
 
 
   .research-info h3 {
+    color: #f0f0f0;
+    font-size: 11px;
+    font-weight: bold;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+    margin: 10px 0;
+  }
+
+
+/*---------------------------------------
+      Anindilyakwa image   
+  -----------------------------------------*/
+
+  #anindilyakwa {
+    background: url('../images/Sections/Anindilyakwa.jpg') no-repeat center center;
+    background-size: cover;
+    vertical-align: middle;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    min-height: 100vh;
+    position: relative;
+    padding-top: 12em;
+    text-align: center;
+  }
+
+
+  .anindilyakwa-info h3 {
     color: #f0f0f0;
     font-size: 11px;
     font-weight: bold;
@@ -640,6 +673,38 @@ http://www.tooplate.com/view/2106-soft-landing
     margin-right: 10px;
   }
 
+ /*---------------------------------------
+     Images Bank             
+  -----------------------------------------*/
+#project {
+  background: #ffffff;
+
+}
+
+.project-image1 {
+  background: url('../images/Sections/TAM-in-Anindilyakwa-project.jpg') no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 35vh;
+  margin-top: 25px;
+}
+
+.project-image2 {
+  background: url('../images/Sections/Nganang-Badimaya-Wangga-project.jpg') no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 35vh;
+  margin-top: 25px;
+}
+
+.project-image3 {
+  background: url('../images/Sections/Badimaya-dictionary-project.JPG') no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 35vh;
+  margin-top: 25px;
+}
+
 
   /*---------------------------------------
       PRICING             
@@ -672,6 +737,10 @@ http://www.tooplate.com/view/2106-soft-landing
   .pricing-info {
     border-top: 2px solid #f0f0f0;
     border-bottom: 2px solid #f0f0f0;
+    background: url(../images/Sections/Anindilyakwa.jpg);
+    background-size: cover;
+    width: 100%;
+    height: 35vh;
   }
 
   .pricing-info,
@@ -684,7 +753,13 @@ http://www.tooplate.com/view/2106-soft-landing
   }
 
   .pricing-bottom {
-    position: relative;
+    height: 8vh;
+    margin: auto;
+
+    width: 42%;
+    padding: 30px;
+  
+    
   }
 
   .pricing-bottom span {
@@ -692,10 +767,17 @@ http://www.tooplate.com/view/2106-soft-landing
   }
 
   .pricing-btn {
-    position: absolute;
-    top: 15px;
-    right: 0;
-    display: inline-block;
+    border: 0px solid green;
+
+  }
+
+  .pricing-info2 {
+    border-top: 2px solid #f0f0f0;
+    border-bottom: 2px solid #f0f0f0;
+    background: url(../images/Sections/Badimaya.jpg);
+    background-size: cover;
+    width: 100%;
+    height: 35vh;
   }
 
 
