--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -713,6 +713,13 @@ http://www.tooplate.com/view/2106-soft-landing
   margin-top: 25px;
 }
 
+.project-image5 {
+  background: url('../images/Sections/Badimaya-dictionary.png') no-repeat;
+  background-size: contain;
+  width: 100%;
+  height: 45vh;
+  margin-top: 25px;
+}
 
   /*---------------------------------------
       PRICING             
