--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -715,7 +715,7 @@ http://www.tooplate.com/view/2106-soft-landing
 
 .project-image5 {
   background: url('../images/Sections/Badimaya-dictionary.png') no-repeat;
-  background-size: contain;
+  background-size: cover;
   width: 100%;
   height: 45vh;
   margin-top: 25px;
