--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -713,8 +713,16 @@ http://www.tooplate.com/view/2106-soft-landing
   margin-top: 25px;
 }
 
-.project-image5 {
+.image5 {
   background: url('../images/Sections/Badimaya-dictionary.png') no-repeat;
+  background-size: contain;
+  width: 100%;
+  height: 15vh;
+  margin-top: 25px;
+}
+
+.image6 {
+  background: url('../images/Sections/Badimaya-Guwaga.png') no-repeat;
   background-size: contain;
   width: 100%;
   height: 15vh;
