--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -729,6 +729,14 @@ http://www.tooplate.com/view/2106-soft-landing
   margin-top: 25px;
 }
 
+.image7 {
+  background: url('../images/Sections/Nganang-Badimaya-Wangga-1.png') no-repeat;
+  background-size: contain;
+  width: 100%;
+  height: 15vh;
+  margin-top: 25px;
+}
+
   /*---------------------------------------
       PRICING             
   -----------------------------------------*/
