--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -713,7 +713,7 @@ http://www.tooplate.com/view/2106-soft-landing
   margin-top: 25px;
 }
 
-.image5 {
+.project-image5 {
   background: url('../images/Sections/Badimaya-dictionary.png') no-repeat;
   background-size: contain;
   width: 100%;
@@ -721,7 +721,7 @@ http://www.tooplate.com/view/2106-soft-landing
   margin-top: 25px;
 }
 
-.image6 {
+.project-image6 {
   background: url('../images/Sections/Badimaya-Guwaga.png') no-repeat;
   background-size: contain;
   width: 100%;
@@ -729,7 +729,7 @@ http://www.tooplate.com/view/2106-soft-landing
   margin-top: 25px;
 }
 
-.image7 {
+.project-image7 {
   background: url('../images/Sections/Nganang-Badimaya-Wangga-1.png') no-repeat;
   background-size: contain;
   width: 100%;
