--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -737,6 +737,40 @@ http://www.tooplate.com/view/2106-soft-landing
   margin-top: 25px;
 }
 
+
+.project-image8 {
+  background: url('../images/Sections/On-Badimaya-Country.jpg') no-repeat;
+  background-size: contain;
+  width: 100%;
+  height: 15vh;
+  margin-top: 25px;
+}
+
+.project-image9 {
+  background: url('../images/Sections/Badimaya-seasonal-calendar.png') no-repeat;
+  background-size: contain;
+  width: 100%;
+  height: 15vh;
+  margin-top: 25px;
+}
+
+.project-image10 {
+  background: url('../images/Sections/Bush-yarns-from-Mt-Magnet.png') no-repeat;
+  background-size: contain;
+  width: 100%;
+  height: 15vh;
+  margin-top: 25px;
+}
+
+.project-image11 {
+  background: url('../images/Sections/Joe-Benjamin-Stories.png') no-repeat;
+  background-size: contain;
+  width: 100%;
+  height: 15vh;
+  margin-top: 25px;
+}
+
+
   /*---------------------------------------
       PRICING             
   -----------------------------------------*/
