--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -367,7 +367,7 @@ http://www.tooplate.com/view/2106-soft-landing
     min-height: 100vh;
     position: relative;
     padding-top: 12em;
-    text-align: center;
+    text-align: left;
   }
 
 
