--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -372,12 +372,15 @@ http://www.tooplate.com/view/2106-soft-landing
 
 
   .research-info h3 {
-    color: #f0f0f0;
     font-size: 11px;
     font-weight: bold;
     letter-spacing: 4px;
     text-transform: uppercase;
     margin: 10px 0;
+  }
+
+  .research h1 {
+    color: #000000;
   }
 
 
@@ -554,7 +557,7 @@ http://www.tooplate.com/view/2106-soft-landing
   }
 
   #testimonial h1 {
-    color: #ffffff;
+    color: #000000;
   }
 
   .testimonial-image {
@@ -624,7 +627,7 @@ http://www.tooplate.com/view/2106-soft-landing
   }
 
   #research h1 {
-    color: #ffffff;
+    color: #000000;
   }
 
   .research-image {
