--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -41,6 +41,16 @@ http://www.tooplate.com/view/2106-soft-landing
     line-height: 32px;
   }
 
+  
+  i {
+    font-style: italic;
+    color: #757575;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 32px;
+  }
+  
+ 
 
 
   /*---------------------------------------
