--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -712,7 +712,7 @@ http://www.tooplate.com/view/2106-soft-landing
 
 .project-image1 {
   background: url('../images/Sections/TAM-in-Anindilyakwa-project.jpg') no-repeat;
-  background-size: cover;
+  background-size: contain;
   width: 100%;
   height: 35vh;
   margin-top: 25px;
@@ -720,7 +720,7 @@ http://www.tooplate.com/view/2106-soft-landing
 
 .project-image2 {
   background: url('../images/Sections/Nganang-Badimaya-Wangga-project.jpg') no-repeat;
-  background-size: cover;
+  background-size: contain;
   width: 100%;
   height: 35vh;
   margin-top: 25px;
@@ -728,7 +728,7 @@ http://www.tooplate.com/view/2106-soft-landing
 
 .project-image3 {
   background: url('../images/Sections/Badimaya-dictionary-project.JPG') no-repeat;
-  background-size: cover;
+  background-size: contain;
   width: 100%;
   height: 35vh;
   margin-top: 25px;
@@ -736,7 +736,7 @@ http://www.tooplate.com/view/2106-soft-landing
 
 .project-image4 {
   background: url('../images/Sections/On-Badimaya-Country-project.JPG') no-repeat;
-  background-size: cover;
+  background-size: contain;
   width: 100%;
   height: 35vh;
   margin-top: 25px;
