--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -744,7 +744,7 @@ http://www.tooplate.com/view/2106-soft-landing
 
 .project-image5 {
   background: url('../images/Sections/Badimaya-dictionary.png') no-repeat;
-  background-size: cover;
+  background-size: contain;
   width: 100%;
   height: 15vh;
   margin-top: 25px;
@@ -752,7 +752,7 @@ http://www.tooplate.com/view/2106-soft-landing
 
 .project-image6 {
   background: url('../images/Sections/Badimaya-Guwaga.png') no-repeat;
-  background-size: cover;
+  background-size: contain;
   width: 100%;
   height: 15vh;
   margin-top: 25px;
