--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -862,6 +862,14 @@ http://www.tooplate.com/view/2106-soft-landing
 
 }
 
+.project-image20 {
+  background: url('../images/Sections/Anindilyakwa-map.jpg') no-repeat center;
+  background-size: contain;
+  width: 100%;
+  height: 5vh;
+
+}
+
   /*---------------------------------------
       PRICING             
   -----------------------------------------*/
