--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -67,7 +67,14 @@ http://www.tooplate.com/view/2106-soft-landing
     font-size: 18px;
     font-weight: normal;
     line-height: 32px;
+    list-style: none;
   }
+
+  li {
+    list-style: none;
+    margin-top: 32px;
+  }
+
 
  
 
@@ -866,7 +873,7 @@ http://www.tooplate.com/view/2106-soft-landing
   background: url('../images/Sections/Anindilyakwa-map.jpg') no-repeat center;
   background-size: contain;
   width: 100%;
-  height: 5vh;
+  height: 35vh;
 
 }
 
