--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -382,11 +382,11 @@ http://www.tooplate.com/view/2106-soft-landing
 
   .custom-navbar2 .navbar-nav > li > a:hover,
   .custom-navbar2 .navbar-nav > li > a:focus {
-    background-color: white;
+    background-color: transparent;
   }
 
   .custom-navbar2 .nav li.active > a {
-    background-color: white;
+    background-color: transparent;
     color: #29ca8e;
   }
 
@@ -396,7 +396,7 @@ http://www.tooplate.com/view/2106-soft-landing
   }
 
   .custom-navbar2 .navbar-toggle {
-    background-color: white;
+    background-color: transparent;
   }
 
   .custom-navbar2 .navbar-toggle .icon-bar {
@@ -474,6 +474,47 @@ http://www.tooplate.com/view/2106-soft-landing
     margin: 10px 0;
   }
   
+
+    /*---------------------------------------
+      HOME - anydiliakwa
+  -----------------------------------------*/
+
+  #home2 {
+    background: url('../images/Sections/Anindilyakwa.jpg') no-repeat center center;
+    background-size: cover;
+    vertical-align: middle;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    min-height: 100vh;
+    position: relative;
+    padding-top: 12em;
+    text-align: center;
+  }
+
+  #home2 h1 {
+    color: #ffffff;
+    margin-top: 10px;
+    margin-bottom: 40px;
+  }
+
+  .home2-info {
+    margin-top: 7em;
+  }
+
+  .home2-info h3 {
+    color: #f0f0f0;
+    font-size: 11px;
+    font-weight: bold;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+    margin: 10px 0;
+  }
 
   /*---------------------------------------
       Research image   
