--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -476,7 +476,7 @@ http://www.tooplate.com/view/2106-soft-landing
   
 
     /*---------------------------------------
-      HOME - anydiliakwa
+      HOME 2 - anydiliakwa
   -----------------------------------------*/
 
   #home2 {
@@ -508,6 +508,48 @@ http://www.tooplate.com/view/2106-soft-landing
   }
 
   .home2-info h3 {
+    color: #f0f0f0;
+    font-size: 11px;
+    font-weight: bold;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+    margin: 10px 0;
+  }
+
+
+ /*---------------------------------------
+      HOME 3 - anydiliakwa
+  -----------------------------------------*/
+
+  #home3 {
+    background: url('../images/Sections/Badimaya.jpg') no-repeat center center;
+    background-size: cover;
+    vertical-align: middle;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    min-height: 100vh;
+    position: relative;
+    padding-top: 12em;
+    text-align: center;
+  }
+
+  #home3 h1 {
+    color: #ffffff;
+    margin-top: 10px;
+    margin-bottom: 40px;
+  }
+
+  .home3-info {
+    margin-top: 7em;
+  }
+
+  .home3-info h3 {
     color: #f0f0f0;
     font-size: 11px;
     font-weight: bold;
@@ -1003,6 +1045,14 @@ http://www.tooplate.com/view/2106-soft-landing
 
 .project-image20 {
   background: url('../images/Sections/Anindilyakwa-map.jpg') no-repeat center;
+  background-size: contain;
+  width: 100%;
+  height: 35vh;
+
+}
+
+.project-image21 {
+  background: url('../images/Sections/Badimaya-map.png') no-repeat center;
   background-size: contain;
   width: 100%;
   height: 35vh;
