--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -518,7 +518,7 @@ http://www.tooplate.com/view/2106-soft-landing
 
 
  /*---------------------------------------
-      HOME 3 - anydiliakwa
+      HOME 3 - badimaya
   -----------------------------------------*/
 
   #home3 {
