--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -259,6 +259,7 @@ http://www.tooplate.com/view/2106-soft-landing
     border: none;
     margin-bottom: 0;
     padding: 25px 0;
+    margin-top: -10px;
   }
 
   .custom-navbar .navbar-brand {
