--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -259,7 +259,7 @@ http://www.tooplate.com/view/2106-soft-landing
     border: none;
     margin-bottom: 0;
     padding: 25px 0;
-    margin-top: -30px;
+    margin-top: 27px; /* DELETE THIS IF YOU GET ANY PROBLEM */
   }
 
   .custom-navbar .navbar-brand {
