--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -266,6 +266,7 @@ http://www.tooplate.com/view/2106-soft-landing
     font-size: 25px;
     font-weight: 500;
     letter-spacing: -1px;
+    margin-top: 27px; /* DELETE THIS IF YOU GET ANY PROBLEM */
   }
 
   .top-nav-collapse {
