--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -566,11 +566,21 @@ http://www.tooplate.com/view/2106-soft-landing
   -----------------------------------------*/
 
   #research {
-    background: url('../images/Sections/Research.JPG') no-repeat;
+    background: url('../images/Sections/Research.JPG') no-repeat center center;
     background-size: cover;
-    width: 100%;
-    height: 350px;
-    margin-top: 25px;
+    vertical-align: middle;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    min-height: 100vh;
+    position: relative;
+    padding-top: 12em;
+    text-align: left;
   }
 
 
@@ -763,8 +773,7 @@ http://www.tooplate.com/view/2106-soft-landing
     background: url('../images/Profile_Pic/About.jpg') no-repeat center center;
     background-size: cover;
     width: 100%;
-    height: 350vh;
-    margin-top: 25px;
+    height: 65vh;
   }
 
 
@@ -834,7 +843,8 @@ http://www.tooplate.com/view/2106-soft-landing
     background: url('../images/Sections/Research.JPG') no-repeat;
     background-size: cover;
     width: 100%;
-    height: 35vh;
+    height: 350px;
+    margin-top: 25px;
   }
 
 
