--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -343,7 +343,7 @@ http://www.tooplate.com/view/2106-soft-landing
 
 
 /*---------------------------------------
-      MENU 2 !!!!!  FOR ANYDILIAKWA AND BADIMAYA PAGES  
+      MENU 2 !!!!!  FOR ANYDILIAKWA AND BADIMAYA PAGES   - DONT USE THIS
   -----------------------------------------*/
 
   .custom-navbar2 {
