--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -773,7 +773,7 @@ http://www.tooplate.com/view/2106-soft-landing
     background: url('../images/Profile_Pic/About.jpg') no-repeat center center;
     background-size: cover;
     width: 100%;
-    height: 65vh;
+    height: 650px;
   }
 
 
@@ -1340,6 +1340,12 @@ http://www.tooplate.com/view/2106-soft-landing
       padding: 30px;
     }
   }
+
+  @media screen and (max-width: 450px) {
+    .project-image4{
+    height: 250px !important;
+    }
+    }
 
 
   @media screen and (max-width: 480px) {
