--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -1227,6 +1227,10 @@ http://www.tooplate.com/view/2106-soft-landing
     color: #ffffff;
   }
 
+  .bullet li{
+    list-style: disc;
+  }
+
 
 
   /*---------------------------------------
