--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -895,6 +895,15 @@ http://www.tooplate.com/view/2106-soft-landing
 }
 
 .project-image1 {
+  background: url('../images/Sections/project-image0.jpg') no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 350px;
+  margin-top: 25px;
+}
+
+
+.project-image1 {
   background: url('../images/Sections/TAM-in-Anindilyakwa-project.jpg') no-repeat;
   background-size: cover;
   width: 100%;
