--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -1074,7 +1074,7 @@ http://www.tooplate.com/view/2106-soft-landing
 
 
 .project-image23 {
-  background: url('../images/Sections/project-image0.jpg') no-repeat;
+  background: url('../images/Contact_Logos/project-image23.png') no-repeat;
   background-size: cover;
   width: 100%;
   height: 350px;
