--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -1009,7 +1009,7 @@ http://www.tooplate.com/view/2106-soft-landing
 }
 
 .project-image15 {
-  background: url('../images/Contact_Logos/academia.jpg') no-repeat;
+  background: url('../images/Contact_Logos/academia.png') no-repeat;
   background-size: contain;
   width: 100%;
   height: 8vh;
